# sourcespec

./: .flake8  .gitattributes  .gitignore  .pylintrc  .readthedocs.yaml  .sourcery.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTORS.txt  ChangeLog.txt  MANIFEST.in  README.md  README.txt  config_CRL.py  make_dist.sh  pyproject.toml  sample_config.py  setup.cfg  setup.py  source_model.py  source_spec.py  sourcespec_conda_env.yml  spectrum.py  ssp_output.py  ssp_plot_spectra.py  ssp_read_traces.py  ssp_residuals.py  ssp_setup.py  ssp_util.py  traceids.py
.github/workflows/: github-deploy.yml  test.yml
doc/: Makefile  api.rst  conf.py  index.rst  make.bat  source_spec.rst
doc_src/: Makefile  api.rst  conf.py  source_spec.rst
docs/: Makefile  api.rst  bibliography.rst  citing.rst  citing_conferences.bib  citing_literature.rst  citing_papers.bib  clipping_detection.rst  conf.py  contributing.rst  file_formats.rst  getting_help.rst  getting_started.rst  index.rst  input_file_formats.rst  installation.rst  mock_modules.py  output_file_formats.rst  reformat_bibtex.py  refs.bib  requirements.txt  sample_runs.rst  signal_processing.rst  source_spec_event_file.rst  spectral_file_formats.rst  spectral_inversion.rst  supported_file_formats.rst  theoretical_background.rst
docs/_static/: custom.css  custom.js
lib/: config.py  configspec.conf  configspec.par  spectrum.py  ssp_build_spectra.py  ssp_correction.py  ssp_inversion.py  ssp_local_magnitude.py  ssp_output.py  ssp_plot_spectra.py  ssp_plot_spectranoise.py  ssp_plot_traces.py  ssp_plot_weight.py  ssp_process_traces.py  ssp_read_traces.py  ssp_residuals.py  ssp_setup.py  ssp_spectral_model.py  ssp_util.py
scripts/: collect_testrun_artifacts.sh  do_testruns.sh
source_spec/: source_model.py  source_residuals.py  source_spec.py  spectrum.py  ssp_setup.py  ssp_util.py
sourcespec/: AsyncPlotter.py  __init__.py  _version.py  cached_tiler.py  clipping_detection.py  config.py  configspec.conf  kdtree.py  map_tiles.py  plot_sourcepars.py  savefig.py  savepng.py  source_model.py  source_residuals.py  source_spec.py  spectrum.py  ssp_averages.py  ssp_build_spectra.py  ssp_correction.py  ssp_data_types.py  ssp_db_definitions.py  ssp_event.py  ssp_geom_spreading.py  ssp_grid_sampling.py  ssp_grid_search.py  ssp_html_report.py  ssp_inversion.py  ssp_inversion_types.py  ssp_local_magnitude.py  ssp_output.py  ssp_parse_arguments.py  ssp_pick.py  ssp_plot_params_stats.py  ssp_plot_spectra.py  ssp_plot_stacked_spectra.py  ssp_plot_stations.py  ssp_plot_traces.py  ssp_process_traces.py  ssp_qml_output.py  ssp_radiated_energy.py  (+15 more)
sourcespec/adjustText/: __init__.py
sourcespec/config_files/: configspec.conf  ssp_event.yaml
sourcespec/html_report_template/: index.html  misfit.html  misfit_table_column.html  spectra_plot.html  station_table_row.html  style.css  traces_plot.html
sourcespec2/: __init__.py  _version.py  cached_tiler.py  clipping_detection.py  config.py  kdtree.py  map_tiles.py  plot_sourcepars.py  savefig.py  source_model.py  source_residuals.py  source_spec.py  spectrum.py  ssp_build_spectra.py  ssp_correction.py  ssp_data_types.py  ssp_db_definitions.py  ssp_event.py  ssp_geom_spreading.py  ssp_grid_sampling.py  ssp_html_report.py  ssp_inversion.py  ssp_local_magnitude.py  ssp_output.py  ssp_parse_arguments.py  ssp_pick.py  ssp_plot_params_stats.py  ssp_plot_spectra.py  ssp_plot_stacked_spectra.py  ssp_plot_stations.py  ssp_plot_traces.py  ssp_process_traces.py  ssp_qml_output.py  ssp_radiated_energy.py  ssp_radiation_pattern.py  ssp_read_event_metadata.py  ssp_read_sac_header.py  ssp_read_station_metadata.py  ssp_read_traces.py  ssp_residuals.py  (+9 more)
sourcespec2/config/: __init__.py  config.py  configobj_helpers.py  configspec.conf  configure_cli.py  library_versions.py  ssp_event.yaml
sourcespec2/config_files/: configspec.conf
sourcespec2/html_report_template/: index.html  quakeml_file_link.html  spectra_plot.html  station_table_row.html  supplementary_file_links.html
sourcespec2/input/: __init__.py  augment_event.py  augment_traces.py  event_and_picks.py  event_metadata.py  instrument_type.py  sac_header.py  station_metadata.py  traces.py
sourcespec2/input/event_parsers/: __init__.py  asdf_event.py  hypo2000.py  hypo71.py  obspy_catalog.py  override_event_depth.py  quakeml.py  sac_event.py  source_spec_event.py
sourcespec2/input/station_metadata_parsers/: __init__.py  asdf_inventory.py  paz.py  sac_station_metadata.py
sourcespec2/input/trace_parsers/: __init__.py  asdf_traces.py
sourcespec2/setup/: __init__.py  config.py  config_helpers.py  configobj_helpers.py  configspec.conf  configure_cli.py  exit.py  library_versions.py  logging.py  mandatory_deprecated.py  outdir.py
